--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,14 +16,13 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11.0.2
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
       - name: Build with Gradle and Deploy JAR
         run: |
+          chmod +x gradlew
           ./gradlew build
           pwd
           ls
           cd build/libs
-          cat ${{ secrets.SERVER_PEM }} >> key.pem
-          ls
-          scp -i key.pem * ${{ secrets.SERVER }}:~/deployments
+          echo '${{ secrets.SERVER_PEM }}' >> key.txt
+          scp -i key.txt * ${{ secrets.SERVER }}:~/deployments/
+          rm key.txt
