--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,12 +13,27 @@ jobs:
       - uses: actions/checkout@v2
       - name: Set Release Version
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Print Release Version
-        run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
 
-      # Upgrade sentry version
+      - name: Print Release Version
+        run: echo ${{ env.RELEASE_VERSION }}
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.2
+
+      # Create JAR and deploy to EC2 instance
+      - name: Build with Gradle and Deploy JAR to EC2
+        run: |
+          chmod +x gradlew
+          ./gradlew build
+          cd build/libs
+          echo '${{ secrets.SERVER_PEM }}' >> key.txt
+          chmod 400 key.txt
+          scp -o StrictHostKeyChecking=no -i key.txt *.jar ${{ secrets.SERVER }}:~/deployments/
+          rm key.txt
+
+      # Upgrade sentry version for project
       - name: Create Sentry Release
         uses: getsentry/action-release@v1
         env:
